--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "C:\\Users\\user\\Anaconda3\\envs\\kaol_6_2020\\python.exe"
+    "python.pythonPath": "C:\\Users\\user\\Anaconda3\\envs\\Theia\\python.exe"
 }
